--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/pofallon/node-qpid.git"
   },
   "devDependencies": {
+    "async": "*",
     "optimist": "*",
     "nconf": "*"
   },
