--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "devDependencies": {
     "optimist": "*",
-    "nconf": "*"
+    "nconf": "*",
+    "async": "*"
   },
   "engine": ">= 0.6.13 && < 0.11.0",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
     "index.js",
     "binding.gyp",
